[project]
name = "restaurant-bot"
version = "0.1.0"
description = "Multimodal restaurant assistant using OpenAI Agents SDK with triage and domain sub-agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.60.0",
    "openai-agents>=0.1.0",
    "streamlit>=1.41.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
]
